# Potatolog

./: AGENTS.md  Cargo.toml  DIFFERENTIAL_REVIEW_REPORT.md  README.md
.cursor/skills/logviewer-tauri-desktop/: SKILL.md  reference.md
.github/workflows/: build.yml  release.yml
docs/: dependencies.md  desktop-tauri.md
examples/: CORE.OUT  reu.out
scripts/: package-windows.ps1
src/: cli.rs  desktop.rs  filters.rs  lib.rs  process.rs  query.rs  readers.rs  web.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.toml
src-tauri/src/: lib.rs  main.rs
static/: api.js  frontend.html  index.html
tests/fixtures/: sample_core.out  sample_reu.out  sample_reu_detect.out
