[package]
name = "logviewer"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
edition = "2021"

[dependencies]
clap = { version = "2.33", optional = true }
rayon = "1.5"
regex = "1.0"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "0.2", optional = true, features = ["full"] }
warp = { version = "0.2", optional = true }
bytes = { version = "0.5", optional = true }
wry = { version = "0.55", optional = true, default-features = false, features = ["os-webview"] }
tao = { version = "0.35", optional = true }

[features]
default = ["cli", "web"]
json = ["serde", "serde_derive", "serde_json"]
cli = ["json", "clap"]
web = ["json", "tokio", "warp", "bytes"]
desktop = ["web", "wry", "tao"]

[[bin]]
name = "logviewer"
path = "src/cli.rs"
required-features = ["cli", "json"]
