[workspace]
members = ["src-tauri"]
resolver = "2"

[package]
name = "logviewer"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
edition = "2021"

[dependencies]
clap = { version = "4", optional = true }
rayon = "1"
regex = "1"
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "time", "net"] }
warp = { version = "0.4", optional = true, default-features = false, features = ["server"] }
bytes = { version = "1", optional = true }

[features]
default = ["cli", "web"]
json = ["serde", "serde_derive", "serde_json"]
cli = ["json", "clap"]
web = ["json", "tokio", "warp", "bytes"]

[[bin]]
name = "logviewer"
path = "src/cli.rs"
required-features = ["cli", "json"]
