[package]
name = "potatolog-desktop"
version = "0.1.0"
description = "Potatolog desktop app"
authors = ["emi"]
edition = "2024"

[lib]
name = "potatolog_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "potatolog-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
potatolog = { path = "..", default-features = false, features = ["json", "web"] }
tauri = { version = "2.11", features = [] }
tokio = { version = "1", features = ["rt-multi-thread"] }
